--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,5 @@
 name: my-action
 runs:
   using: "composite"
-  steps:
-    - name 
-      runs: echo "Hi, my-action!"
+  echo "Hi, my-action!"
       
